[package]
name = "con621"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "5"
image = "0.25"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
